Рабочий первый блок командной работы с тестами